--- a/config/doom/config.org
+++ b/config/doom/config.org
@@ -277,6 +277,50 @@ Disable line-numbering in org and markdown modes
     (select-window w-main)))
 #+end_src
 
+** display: prettification
+
+#+begin_src elisp
+(setq +ligatures-extra-symbols
+      '(;; org
+        :name          "»"
+        :src_block     "»"
+        :src_block_end "«"
+        :quote         "“"
+        :quote_end     "”"
+        ;; Functional
+        :lambda        "λ"
+        :def           "ƒ"
+        :composition   "∘"
+        :map           "↦"
+        ;; Types
+        :null          "∅"
+        ;; :true          "𝕋"
+        ;; :false         "𝔽"
+        ;; :int           "ℤ"
+        ;; :float         "ℝ"
+        ;; :str           "𝕊"
+        ;; :bool          "𝔹"
+        ;; :list          "𝕃"
+        ;; Flow
+        :not           "￢"
+        :in            "∈"
+        :not-in        "∉"
+        :and           "∧"
+        :or            "∨"
+        :for           "∀"
+        :some          "∃"
+        :return        "⟼"
+        :yield         "⟻"
+        ;; Other
+        :union         "⋃"
+        :intersect     "∩"
+        :diff          "∖"
+        :tuple         "⨂"
+        ;; :pipe          "" ;; FIXME: find a non-private char
+        :dot           "•")
+      )
+#+end_src
+
 ** scrolling
 
 #+begin_src elisp :tangle no
